Tue Feb 20 14:07:50 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Merge test rtags into test basic2.  They never were
	capable of running separately of each other.

	* sanity.sh (deep): New test, to test ability to operate in deeply
	nested directories (more quickly than basic2 test did).
	(basic2,rtags): Remove directories dir3 and dir4.  Remove file8,
	file10, file12, file9, file11, file13, file15, file16, file17.
	These additional files slowed down the tests considerably without
	significantly increasing coverage.

	* sanity.sh (PROG): New variable.  Use it instead of "cvs"
	to match the name cvs prints out for itself.

Mon Feb 19 09:00:29 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	This fixes a bug whereby old default attributes would get
	clobbered instead of added to on "cvs watch add".
	* hash.c (findnode): Don't check for key == NULL; let the
	assertion in hashp take care of it.
	* fileattr.h, fileattr.c (fileattr_get): If filename is NULL,
	return default attributes.

	* client.c (send_repository): Fix indentation.

Mon Feb 19 01:10:01 1996  Karl Fogel  <kfogel@floss.red-bean.com>

        * login.c (login): print out full repos so user knows which server
        she's logging into.

        * client.c (send_repository): die if `repos' is NULL.  This is a
        lame solution; see comments in code.

Thu Feb 15 15:04:01 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* error.c (error): Free entire and mess when done with them.

	* sanity.sh (info): Correct syntax of .cvsrc file.

	* cvs.h, expand_path.c, edit.c, parseinfo.c, wrapper.c:
	expand_path now takes arguments containing file and line for error
	message, and it prints the error message itself.
	* sanity.sh (info-6a): Test printing of error message.

	* expand_path.c (expand_variable): Add USER internal variable.
	* sanity.sh (info): Test USER and CVSROOT internal variables too.

Wed Feb 14 19:11:08 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c (usg): Add -s option.